--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <section id="about">
       <h2>About</h2>
-      <p>Hi, I’m learning how to host websites using GitHub Pages.  
+      <p>Hi, my self Anushree Moraskar.</p>
+      <p> I’m learning how to host websites using GitHub Pages.  
       This project shows how HTML + CSS works together.</p>
     </section>
 
