--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
   <main>
     <section id="home">
-      <h2>Home</h2>
-      <p>This is a simple static website hosted with <strong>GitHub Pages</strong>.  
-      It’s fast, free, and easy to update!</p>
+      <h2>About</h2>
+      <p>Hi, I’m learning how to host websites using GitHub Pages.  
+      This project shows how HTML + CSS works together.</p>
     </section>
 
     <section id="about">
       <h2>About</h2>
-      <p>Hi, my self Anushree Moraskar.</p>
+      <p>Hi,.</p>
       <p> I’m learning how to host websites using GitHub Pages.  
       This project shows how HTML + CSS works together.</p>
     </section>
